--- a/app/src/main/res/layout/item_holder.xml
+++ b/app/src/main/res/layout/item_holder.xml
@@ -6,6 +6,10 @@
     android:clickable="true"
     android:orientation="vertical"
     android:gravity="center_vertical"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
